fix line wrap bug in chinese

--- a/src/components/Badge.module.css
+++ b/src/components/Badge.module.css
@@ -43,6 +43,8 @@
   font-weight: var(--weight-medium);
   font-stretch: ultra-condensed;
   text-align: start;
+  white-space: nowrap;
+  text-wrap: nowrap;
 }
 
 .badge:not([data-type="none"]) {
